--- a/index.html
+++ b/index.html
@@ -7,16 +7,49 @@
     <title>Tolgahan Feyizoğlu</title>
 </head>
 <body>
-    <h1>Tolgahan Feyizoğlu</h1>
-    <h2>Hakkımda</h2>
-    <p>İyi bir spor izleyicisiyim. Filmler dizilere göre benim için daha önceliklidir. Güncel olarak yazılım geliştirme alanında kendimi geliştirmeye çalışıyorum.</p>
+<h1>Tolgahan Feyizoğlu</h1>
+<h2>Hakkımda</h2>
+    <p>Merhaba. Kişisel sayfama hoşgeldiniz. <br>
+    Ben Tolgahan, şimdilik sizlerle en beğendiğim 3 film, 3 dizi ve 3 kitabı paylaşacağım.</p>
 
-    <h2>Favori 3 Filmim</h2>
-    
-    <ul>
-        <li>A Seperation</li>
-        <li>The Perks of Being a Wallflower</li>
-        <li>The Hunt</li>
-    </ul>
+<h2>Favorilerim</h2>
+<ol>  
+    <!-- İlk kategorileri sıralı ama kendi içindekileri sırasız paylaşıyorum -->
+    <li>Filmler
+        <ul>
+            <li>
+                A Seperation <a href="https://www.youtube.com/watch?v=58Onuy5USTc&ab_channel=SonyPicturesClassics" target="_blank">(Fragman)</a>
+                <!-- İlerde fragman direkt siteye gömülebilir -->
+            </li>
+            <li>The Perks of Being a Wallflower</li>
+            <li>The Hunt</li>
+         </ul>
+    </li>
+    <li>Diziler
+        <ul>
+            <li>
+                <a href="https://www.imdb.com/title/tt0903747/" target="_blank">Breaking Bad</a>
+            </li>
+            <li>Leyla ile Mecnun 
+                <span  style="color: red;">(İlk 103 Bölüm :) )</span>
+            </li>
+            <!-- style her yazı içine eklenebilir bir özellik -->
+            <li>Friends</li>
+        </ul>
+    </li>
+    <li>Kitaplar
+        <ul>
+            <li>
+                <a href="https://www.goodreads.com/tr/book/show/2152663.Tehlikeli_Oyunlar" target="_blank" >Tehlikeli Oyunlar</a>      
+            </li>
+            <li>Körlük</li>
+            <li>Nietzsche Ağladığında</li>
+        </ul>
+    </li>
+</ol>
+<p>
+    <b style="color: blue;">Görüşmek Üzere...</b>
+</p>
+<img src="http://sebeder.org/images/icerik/Leyla_Ile_Mecnun__Ismail_Abi_Gemiye_El_Sallarken_sebeder.org_1645.jpg" alt="İsmail Abiğ">
 </body>
 </html>
