--- a/index.html
+++ b/index.html
@@ -1,55 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=2.0">
     <title>Tolgahan Feyizoğlu</title>
+    <link rel="stylesheet" href="css/kodlar.css">
 </head>
 <body>
-<h1>Tolgahan Feyizoğlu</h1>
-<h2>Hakkımda</h2>
-    <p>Merhaba. Kişisel sayfama hoşgeldiniz. <br>
-    Ben Tolgahan, şimdilik sizlerle en beğendiğim 3 film, 3 dizi ve 3 kitabı paylaşacağım.</p>
-
-<h2>Favorilerim</h2>
-<ol>  
-    <!-- İlk kategorileri sıralı ama kendi içindekileri sırasız paylaşıyorum -->
-    <li>Filmler
-        <ul>
-            <li>
-                A Seperation <a href="https://www.youtube.com/watch?v=58Onuy5USTc&ab_channel=SonyPicturesClassics" target="_blank">(Fragman)</a>
-                <!-- İlerde fragman direkt siteye gömülebilir -->
-            </li>
-            <li>The Perks of Being a Wallflower</li>
-            <li>The Hunt</li>
-         </ul>
-    </li>
-    <li>Diziler
-        <ul>
-            <li>
-                <a href="https://www.imdb.com/title/tt0903747/" target="_blank">Breaking Bad</a>
-            </li>
-            <li>Leyla ile Mecnun 
-                <span  style="color: red;">(İlk 103 Bölüm :) )</span>
-            </li>
-            <!-- style her yazı içine eklenebilir bir özellik -->
-            <li>Friends</li>
-        </ul>
-    </li>
-    <li>Kitaplar
-        <ul>
-            <li>
-                <a href="https://www.goodreads.com/tr/book/show/2152663.Tehlikeli_Oyunlar" target="_blank" >Tehlikeli Oyunlar</a>      
-            </li>
-            <li>Körlük</li>
-            <li>Nietzsche Ağladığında</li>
-        </ul>
-    </li>
-</ol>
-<p>
-    <b style="color: blue;">Görüşmek Üzere...</b>
+        <!-- Navbar Buradan Başlıyor -->
+        <header>
+            <nav >
+                <ul class="head">
+                    <li>
+                        <a class="index" href="index.html">Ana Sayfa</a>
+                    </li>
+                    <li>
+                        <a class="index" href="filmler.html">Film Listesi</a>
+                    </li>
+                    <li>
+                        <a class="index" href="diziler.html">Dizi Listesi</a>
+                    </li>
+                    <li>
+                        <a class="index" href="sporlar.html">İlgi Duyduğum Sporlar</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <!-- Navbar Burada Bitiyor -->
+<h1 style="text-align: center;">..Hakkımda..</h1>
+<p style="text-align: center;">Ben Tolgahan, yazılım geliştirme ile uğraşıyorum. <br>
+En büyük hobim seyehat etmek fakat koronavirüs başladıktan sonra bu konu bir miktar sekteye uğradı. <br>
+Bu nedenle daha çok izleyebildiğim ve yapabildiğim şeyleri şimdilik sizlerle paylaşmak istiyorum. <br>
+İleride kendim ve gözlemlerimle alakalı daha ayrıntılı şeyler de paylaşabilirim.
 </p>
-<img src="http://sebeder.org/images/icerik/Leyla_Ile_Mecnun__Ismail_Abi_Gemiye_El_Sallarken_sebeder.org_1645.jpg" alt="İsmail Abiğ">
 </body>
 </html>
